# rustExample

./: .gitignore  Cargo.toml  README.md  autogen.sh
doc/: Makefile  rustExample.tex
src/: lib.rs
