[package]
name = "rustExample"
version = "0.8.9"
authors = ["Tranalyzer2 dev. team"]

# Keep the "t2plugin" dependency definition on a single line with the "features" key at the end
# This is needed by autogen.sh to dynamically edit the features according to networkHeaders.h
[dependencies]
t2plugin = { version = "0.8.9", git = "https://github.com/Tranalyzer/t2plugin.git", tag = "v0.8.9", features = ["IPV6_DUALMODE","SCTP_STATFINDEX","FLOW_AGGREGATION","SUBNET_INIT","ETH_ACTIVATE","T2_PRI_HDRDESC"] }
libc = "0.2.84"
lazy_static = "1.4.0"

[lib]
crate-type = ["dylib"]

[features]
ETH_ACTIVATE = []
IPV6_ACTIVATE = []
IPV6_DUALMODE = []
SCTP_ACTIVATE = []
SCTP_STATFINDEX = []
MULTIPKTSUP = []
T2_PRI_HDRDESC = []
SUBNET_INIT = []
FLOW_LIFETIME = []
FLOW_AGGREGATION = []
